# coursework_2_search_vacation

./: .coverage  README.md  main.py  pyproject.toml  vacancies.json
src/: hh_api.py  json_creator.py  vacancies.py
tests/: test_hh_api.py  test_vacancies.py
